fix body alignment bug

--- a/io.web/src/main/webapp/css/cyborg-chronicles/cyborg-chronicles.css
+++ b/io.web/src/main/webapp/css/cyborg-chronicles/cyborg-chronicles.css
@@ -37,7 +37,7 @@ img.twitter-logo {
 /* FORMATTING FOR LEFT SIDE NAV MENU */
 
 div.csh-nav-width {
-    width: 20%
+    width: 19%
 }
 
 div.csh-left-menu-main {
